[package]
name = "nom-parse-trait"
description = "Adding traits to make parsing types easier"
version = "0.2.0"
license = "MIT/Apache-2.0"
keywords = ["nom", "parser", "parsable"]
categories = ["parsing"]
authors = ["Marc de Jonge <marcdejonge@gmail.com>"]
homepage = "https://github.com/marcdejonge/nom-parse-trait"
repository = "https://github.com/marcdejonge/nom-parse-trait.git"
readme = "README.md"
edition = "2021"

include = [
    "src/*.rs",
    "LICENSE-*",
    "README.md",
]

[lib]
path = "src/lib.rs"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "generic_input"
path = "examples/generic_input.rs"

[dependencies]
nom = "7.1.3"
